--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,32 +1,30 @@
 # Change 'comments' to true for Disqus comments
 disqus:
   comments: false
-  disqus_shortname: 'https-lenpaul-github-io-lagrange'
+  disqus_shortname: ''
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: 'UA-112060364-1'
+google-ID: ''
 
 menu:
-- {name: 'About', path: 'menu', url: 'about.html'}
-- {name: 'Writing', path: 'menu', url: 'writing.html'}
-- {name: 'Contact', path: 'menu', url: 'contact.html'}
+- {name: 'О блоге', path: 'menu', url: 'about.html'}
+- {name: 'Архив', path: 'menu', url: 'writing.html'}
+- {name: 'Контакты', path: 'menu', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github', link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'linkedin', link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
+- {icon: 'github', link: 'https://www.github.com/retro3f'}
+- {icon: 'envelope', link: 'mailto:retro3f@gmail.com'}
 - {icon: 'rss-square', link: '/feed.xml'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
 pagination:
-  next_page: 'Newer'
-  previous_page: 'Older'
+  next_page: 'Следующая'
+  previous_page: 'Предыдущая'
 
-sharing_button_prompt: 'Feel free to share!'
+sharing_button_prompt: 'Не стесняйтесь делиться!'
 
-related_posts: 'You may also enjoy:'
+related_posts: 'Вам также может понравиться:'
 
-post_date_prefix: 'Written on'
+post_date_prefix: 'Дата публикации'
