--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,8 @@ permalink:           none
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'Your Site Name'
-description:	       'with a cool subheading'
-author:              'You!'
+title:		           'Climate Research Log'
+author:              'Dani Lafarga'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
