--- a/docs/_data/settings.yml
+++ b/docs/_data/settings.yml
@@ -1,10 +1,10 @@
 # Change 'comments' to true for Disqus comments
 disqus:
   comments: false
-  disqus_shortname: 'https-lenpaul-github-io-lagrange'
+  disqus_shortname: 'https-dlafarga-github-io'
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: 'UA-112060364-1'
+google-ID: ''
 
 menu:
 - {name: 'About', path: 'menu', url: 'about.html'}
@@ -13,11 +13,9 @@ menu:
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github', link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'linkedin', link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
-- {icon: 'rss-square', link: '/feed.xml'}
+- {icon: 'github', link: 'https://www.github.com/dlafarga'}
+- {icon: 'linkedin', link: 'https://www.linkedin.com/in/dani-lafarga-47b38116b/'}
+- {icon: 'envelope', link: 'mailto:dlafarga9505@sdsu.edu'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
@@ -25,8 +23,6 @@ pagination:
   next_page: 'Newer'
   previous_page: 'Older'
 
-sharing_button_prompt: 'Feel free to share!'
-
-related_posts: 'You may also enjoy:'
+related_posts: 'Check out:'
 
 post_date_prefix: 'Written on'
